# ArduinoColab

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
arduino_colab_kernel/: TODO.md  demo.ipynb  magic_board.py  magic_code.py  magic_project.py
arduino_colab_kernel/board/: board.py  board_manager.py  serial_port.py
arduino_colab_kernel/code/: code_manager.py  ino_generator.py
arduino_colab_kernel/demos/: demo.ipynb
arduino_colab_kernel/project/: project_manager.py
arduino_colab_kernel/utils/: utils_cli.py
arduino_kernel/: TODO.md  board_manager.py  code_manager.py  demo.ipynb  ino_generator.py  magic_arduino.py  project_manager.py  tests.ipynb
bridge/: MANIFEST.in  README.md  pyproject.toml
bridge/arduino_colab_bridge/: arduino_colab_server.py  requirements.txt
bridge/arduino_colab_bridge/utils/: utils_cli.py
colab/: MANIFEST.in  README.md  pyproject.toml
colab/arduino_colab_kernel/: TODO.md  magic_board.py  magic_code.py  magic_project.py  magic_serial.py
colab/arduino_colab_kernel/backends/: local_backend.py  protocol.py  remote_backend.py
colab/arduino_colab_kernel/board/: board.py  board_manager.py  serial_port.py
colab/arduino_colab_kernel/bridge/: bridge.py  serial_port.py
colab/arduino_colab_kernel/code/: code_manager.py  ino_generator.py
colab/arduino_colab_kernel/demos/: demo.ipynb
colab/arduino_colab_kernel/project/: config.py  project_manager.py
colab/arduino_colab_kernel/utils/: utils_cli.py
colab/tests/: tests.ipynb
