[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arduino-colab-bridge"
version = "0.1.0"
description = "HW bridge for Arduino Colab"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Jiri Konecny", email = "jiri.konecny@vsb.cz" }
]
keywords = ["arduino", "esp32", "jupyter", "magics", "notebook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "pyserial"
]

[project.urls]
Homepage = "https://github.com/sgtkingo/ArduinoColab"
Repository = "https://github.com/sgtkingo/ArduinoColab/bridge"
Issues = "https://github.com/sgtkingo/ArduinoColab/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["arduino_colab_bridge", "arduino_colab_bridge.*"]

[tool.setuptools]
include-package-data = true